# herdr-wakeup

./: .gitignore  .ignore  Cargo.toml  Makefile  README.md
.github/release-notes/: v0.1.0.md
.github/workflows/: ci.yml  release.yml  vendor-wakeup.yml
crates/wakeup-herdr/: Cargo.toml
crates/wakeup-herdr/src/: main.rs  opts.rs  persist.rs  state.rs
plugin/: herdr-plugin.toml
tests/: start-race.sh
