[package]
name = "wakeup-herdr"
version = "0.1.0"
edition = "2021"
description = "Herdr plugin: keeps macOS awake (via the wakeup binary) while any Herdr-managed agent is working."
license = "MIT"
readme = "../../README.md"
categories = ["command-line-utilities"]
keywords = ["herdr", "agents", "macos", "sleep", "caffeinate"]

[[bin]]
name = "wakeup-herdr"
path = "src/main.rs"

[dependencies]
serde_json = "1"
